Close the email confirmation dialog when its web contents are killed.

This CL adds an observer for the web contents of the sign-in email
confirmation dialog and closes the sign-in confirmation dialog when
the renderer process is killed.

BUG=671983

Review-Url: https://codereview.chromium.org/2603493003
Cr-Commit-Position: refs/heads/master@{#441359}

Former-commit-id: 179af9bcbb6bbf6c72fc8eed7d26659bfa12e6e1